Fixed IASC logo alignment

--- a/src/scss/components/_affiliate-logo.scss
+++ b/src/scss/components/_affiliate-logo.scss
@@ -48,4 +48,5 @@ background-position: -2px 6px;
 
 .hdx {
   background-position: 10px -78px;
+  margin-right: 10px;
 }
